--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BASE_URl = https://clickrwanda-server-production.up.railway.app
-VITE_BASE_URL = http://localhost:3000
+VITE_BASE_URL = https://clickrwanda-server-production.up.railway.app
+VITE_BASE_URl = http://localhost:3000
