--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^5.14.18",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "i18next": "^23.11.4",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^14.1.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-share": "^5.0.3"
