--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "aws-sdk": "^2.1649.0",
     "axios": "^1.5.1",
     "chart.js": "^4.4.3",
     "dotenv": "^16.3.1",
@@ -26,7 +27,8 @@
     "react-i18next": "^14.1.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
-    "react-share": "^5.0.3"
+    "react-share": "^5.0.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
