added aws sdk functionality

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_BASE_URl = https://clickrwanda-server-production.up.railway.app
 VITE_BASE_URL = http://localhost:3000
+VITE_AWS_ACCESS_KEY_ID=AKIA6ODVAPPY43PDXM4L
+VITE_AWS_SECRET_ACCESS_KEY=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
+VITE_BUCKET_NAME=clickrwanda.s3.com
+VITE_REGION=eu-north-1
