--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.3",
     "dotenv": "^16.3.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.11.4",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
