--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "react-snap",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+  },
+  "reactSnap": {
+    "inlineCss": true,
+    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"]
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -32,6 +37,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-share": "^5.0.3",
+    "react-snap": "^1.23.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
