--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "react-snap",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "reactSnap": {
     "inlineCss": true,
-    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"]
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -37,7 +39,6 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-share": "^5.0.3",
-    "react-snap": "^1.23.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -49,8 +50,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
-  },
-  "engines": {
-    "node": ">=14.x"
   }
 }
