--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^23.11.4",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
+    "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
