--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-i18next": "^14.1.1",
     "react-icons": "^4.11.0",
     "react-image": "^4.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.17.0",
     "react-share": "^5.0.3",
     "socket.io-client": "^4.7.5",
