--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.1649.0",
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
+    "client": "file:",
     "dompurify": "^3.1.6",
     "dotenv": "^16.3.1",
     "html2canvas": "^1.4.1",
