--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^5.14.18",
     "aws-sdk": "^2.1649.0",
     "axios": "^1.7.4",
