--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^5.14.18",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "aws-sdk": "^2.1649.0",
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
@@ -43,6 +44,7 @@
     "react-icons": "^4.11.0",
     "react-image": "^4.1.0",
     "react-quill": "^2.0.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.17.0",
     "react-share": "^5.0.3",
     "socket.io-client": "^4.7.5",
@@ -52,10 +54,13 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "vite": "^4.4.5"
   }
 }
