--- a/.hintrc
+++ b/.hintrc
@@ -7,9 +7,18 @@
       "default",
       {
         "ignore": [
-          "text-wrap: pretty"
+          "text-wrap: pretty",
+          "scrollbar-width"
         ]
       }
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not chrome <= 109",
+    "not ios_saf <= 17.5",
+    "not safari <= 17.5",
+    "not samsung <= 25"
+  ]
 }
