--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URl = https://clickrwanda-server-production.up.railway.app
+# VITE_BASE_URl = https://api.clickrwanda.com
 VITE_BASE_URL = http://localhost:3000
 # VITE_BASE_URL = http://192.168.1.71:3000
 VITE_AWS_ACCESS_KEY_ID=AKIA6ODVAPPY43PDXM4L
