added search page, added beta clickrwanda api

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_AWS_SECRET_ACCESS_KEY=orvN1NiJ9eTnyvzLsI5S5/SUaXnNQvhhhaF7jOwb
 VITE_BUCKET_NAME=clickrwanda.s3.com
 VITE_REGION=eu-north-1
 VITE_SERVER_KEY=clickrwanda@2024
+VITE_BETA_SERVER=http://localhost:3001/api
