--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^5.14.18",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "aws-sdk": "^2.1649.0",
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
