--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-helmet": "^6.1.0",
